--- a/templates/dash/fx.html
+++ b/templates/dash/fx.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}dash home{% endblock %}
+{% block title %}FX rate{% endblock %}
 
 {% block content %}
     <p>{{ output }}</p>
