--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Default Title{% endblock %}</title>
+    <title>{% block title %}Trocos.pt{% endblock %}</title>
     {% block extra_head %}{% endblock %}
+    <link href="{% static 'css/output.css' %}" rel="stylesheet">
 </head>
 <body>
     {% block body %}{% endblock %}
