--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Trocos.pt{% endblock %}</title>
+    <title>{% block title %}trocos.pt{% endblock %}</title>
     {% block extra_head %}{% endblock %}
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% block content %}{% endblock %}
 </body>
 </html>
 
