--- a/templates/dash/property.html
+++ b/templates/dash/property.html
@@ -3,5 +3,9 @@
 {% block title %}property page{% endblock %}
 
 {% block content %}
-    <p>{{ output }}</p>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">submit</button>
+    </form>
 {% endblock %}
