--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}trocos.pt{% endblock %}</title>
     {% block extra_head %}{% endblock %}
+    
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
+
 </head>
 <body>
-    {% block content %}{% endblock %}
+    
+    {% block content %}
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 </body>
 </html>
 
